grammar.js
        source_file: $ => seq(
            repeat(choice($.directive, $._newline)),
            choice(
                $.diagram_sequence,
                $.diagram_class,
                $.diagram_state,
                $.diagram_gantt,
                $.diagram_pie,
                $.diagram_flow,
                $.diagram_er,
                $.diagram_mindmap,
                $.diagram_gitgraph,
                $.diagram_journey,
        )),

        diagram_gitgraph: $ => seq(
            kwd("gitGraph"),
            repeat(choice($._gitgraph_stmt, $._newline)),
        ),

        _gitgraph_stmt: $ => choice(
            $.gitgraph_stmt_commit,
            $.gitgraph_stmt_branch,
            $.gitgraph_stmt_checkout,
            $.gitgraph_stmt_merge,
            $.gitgraph_stmt_cherry_pick,
        ),

        gitgraph_stmt_commit: $ => seq(
            kwd("commit"),
            optional($.gitgraph_commit_attrs),
            $._newline,
        ),

        gitgraph_commit_attrs: $ => repeat1(
            choice(
                $.gitgraph_commit_attr_id,
                $.gitgraph_commit_attr_tag,
                $.gitgraph_commit_attr_type,
            )
        ),

        gitgraph_commit_attr_id: $ => seq(
            kwd("id"),
            ":",
            choice($._gitgraph_string, $._gitgraph_branch_name),
        ),

        gitgraph_commit_attr_tag: $ => seq(
            kwd("tag"),
            ":",
            choice($._gitgraph_string, $._gitgraph_branch_name),
        ),

        gitgraph_commit_attr_type: $ => seq(
            kwd("type"),
            ":",
            choice(
                kwd("NORMAL"),
                kwd("REVERSE"),
                kwd("HIGHLIGHT"),
            ),
        ),

        gitgraph_stmt_branch: $ => seq(
            kwd("branch"),
            $.gitgraph_branch_name,
            $._newline,
        ),

        gitgraph_branch_name: $ => $._gitgraph_branch_name,

        gitgraph_stmt_checkout: $ => seq(
            kwd("checkout"),
            $.gitgraph_branch_name,
            $._newline,
        ),

        gitgraph_stmt_merge: $ => seq(
            kwd("merge"),
            $.gitgraph_branch_name,
            $._newline,
        ),

        gitgraph_stmt_cherry_pick: $ => seq(
            kwd("cherry-pick"),
            $.gitgraph_cherry_pick_id,
            $._newline,
        ),

        gitgraph_cherry_pick_id: $ => seq(
            kwd("id"),
            ":",
            choice($._gitgraph_string, $._gitgraph_branch_name),
        ),

        /// journey diagram
