test/corpus/gitgraph.txt
==========================
Simple git graph
==========================

gitGraph
    commit
    commit
    branch develop
    checkout develop
    commit
    commit
    checkout main
    merge develop

---

(source_file
  (diagram_gitgraph
    (gitgraph_stmt_commit)
    (gitgraph_stmt_commit)
    (gitgraph_stmt_branch
      (gitgraph_branch_name))
    (gitgraph_stmt_checkout
      (gitgraph_branch_name))
    (gitgraph_stmt_commit)
    (gitgraph_stmt_commit)
    (gitgraph_stmt_checkout
      (gitgraph_branch_name))
    (gitgraph_stmt_merge
      (gitgraph_branch_name))))

==========================
Git graph with custom IDs and tags
==========================

gitGraph
    commit id:"first"
    commit id:"second" tag:"v1.0"
    branch feature
    commit id:"feature-work"
    checkout main
    merge feature

---

(source_file
  (diagram_gitgraph
    (gitgraph_stmt_commit
      (gitgraph_commit_attrs
        (gitgraph_commit_attr_id)))
    (gitgraph_stmt_commit
      (gitgraph_commit_attrs
        (gitgraph_commit_attr_id)
        (gitgraph_commit_attr_tag)))
    (gitgraph_stmt_branch
      (gitgraph_branch_name))
    (gitgraph_stmt_commit
      (gitgraph_commit_attrs
        (gitgraph_commit_attr_id)))
    (gitgraph_stmt_checkout
      (gitgraph_branch_name))
    (gitgraph_stmt_merge
      (gitgraph_branch_name))))

==========================
Git graph with commit types
==========================

gitGraph
    commit id:"normal-commit"
    commit id:"highlight" type:HIGHLIGHT
    commit id:"reverse" type:REVERSE
    branch release
    checkout release
    commit id:"release-prep"
    checkout main
    merge release

---

(source_file
  (diagram_gitgraph
    (gitgraph_stmt_commit
      (gitgraph_commit_attrs
        (gitgraph_commit_attr_id)))
    (gitgraph_stmt_commit
      (gitgraph_commit_attrs
        (gitgraph_commit_attr_id)
        (gitgraph_commit_attr_type)))
    (gitgraph_stmt_commit
      (gitgraph_commit_attrs
        (gitgraph_commit_attr_id)
        (gitgraph_commit_attr_type)))
    (gitgraph_stmt_branch
      (gitgraph_branch_name))
    (gitgraph_stmt_checkout
      (gitgraph_branch_name))
    (gitgraph_stmt_commit
      (gitgraph_commit_attrs
        (gitgraph_commit_attr_id)))
    (gitgraph_stmt_checkout
      (gitgraph_branch_name))
    (gitgraph_stmt_merge
      (gitgraph_branch_name))))

==========================
Git graph with cherry-pick
==========================

gitGraph
    commit id:"main-1"
    branch feature
    commit id:"feature-1"
    checkout main
    cherry-pick id:"feature-1"
    commit id:"main-2"

---

(source_file
  (diagram_gitgraph
    (gitgraph_stmt_commit
      (gitgraph_commit_attrs
        (gitgraph_commit_attr_id)))
    (gitgraph_stmt_branch
      (gitgraph_branch_name))
    (gitgraph_stmt_commit
      (gitgraph_commit_attrs
        (gitgraph_commit_attr_id)))
    (gitgraph_stmt_checkout
      (gitgraph_branch_name))
    (gitgraph_stmt_cherry_pick
      (gitgraph_cherry_pick_id))
    (gitgraph_stmt_commit
      (gitgraph_commit_attrs
        (gitgraph_commit_attr_id)))))

==========================
Git graph with multiple branches
==========================

gitGraph
    commit
    branch develop
    commit
    branch featureA
    commit
    checkout develop
    branch featureB
    commit
    checkout develop
    merge featureA
    merge featureB
    checkout main
    merge develop

---

(source_file
  (diagram_gitgraph
    (gitgraph_stmt_commit)
    (gitgraph_stmt_branch
      (gitgraph_branch_name))
    (gitgraph_stmt_commit)
    (gitgraph_stmt_branch
      (gitgraph_branch_name))
    (gitgraph_stmt_commit)
    (gitgraph_stmt_checkout
      (gitgraph_branch_name))
    (gitgraph_stmt_branch
      (gitgraph_branch_name))
    (gitgraph_stmt_commit)
    (gitgraph_stmt_checkout
      (gitgraph_branch_name))
    (gitgraph_stmt_merge
      (gitgraph_branch_name))
    (gitgraph_stmt_merge
      (gitgraph_branch_name))
    (gitgraph_stmt_checkout
      (gitgraph_branch_name))
    (gitgraph_stmt_merge
      (gitgraph_branch_name))))
